%% TODO: DECIDIR CÓMO TOMAMOS EL LEGAJO

erDiagram
  %% Entidad Intermedia Alumno-Curso
  Inscripcion {
    bigint Inscripcion_Numero PK
    DATETIME2 Inscripcion_Fecha "length: 6"
    %% Constraint de CHECK("pendiente", "aprobada", "rechazada")
    varchar Inscripcion_Estado "length: 255"
    DATETIME2 Inscripcion_FechaRespuesta "length: 6"
    bigint id_alumno FK
    bigint id_curso FK
  }

  %% Tabla Maestra  Alumno
  Alumno {
    bigint legajo PK
    bigint Alumno_Dni
    varchar Alumno_Nombre "length: 255"
    varchar Alumno_Apellido "length: 255"
    DATETIME2 Alumno_FechaNacimiento "length: 6"
    varchar Alumno_Direccion "length: 255"
    varchar Alumno_Telefono "length: 255"
    varchar Alumno_Mail "length: 255"
    bigint id_localidad FK
  }

  %% Tabla Maestra Curso
    Curso {
    bigint Curso_Codigo PK
    varchar Curso_Nombre "length: 255"
    varchar Curso_Descripcion "length: 255"
    %% Tomamos como que un Curso se dicta en un solo Turno (en la tabla maestra no hay cursos que se dicten en dos turnos)
    %% Constraint de CHECK("mañana", "tarde", "noche")
    varchar Curso_Turno "length: 255"
    DATETIME2 Curso_FechaInicio "length: 6"
    DATETIME2 Curso_FechaFin "length: 6"
    %%DURACIONMESES ES CALCULABLE CON LAS FECHA_INICIO Y FECHA_FIN, pero viene de la Tabla Maestra
    bigint Curso_DuracionMeses
    decimal Curso_PrecioMensual "length: 38, 2"
    bigint id_categoria FK
    bigint id_sede FK
    NVARCHAR id_profesor FK "length:255"
  }

  %% Tablas Paramétricas de Curso
  Categoria {
    bigint id_categoria PK
    varchar nombre "length: 255"
  }

  DiaSemana{
    smallint id PK
    %% Constraint de CHECK("Lunes", "Martes", "Miércoles", "Jueves", "Viernes", "Sábado", "Domingo")
    varchar dia "length: 255"
  }

  %% No se considera un historial de horarios que tuvo un Curso
  Curso_Dia{
    smallint id_dia_semana PK, FK
    bigint id_curso PK, FK
  }

  %% Documentación: la idea del precio histórico es tener el precio de lista vigente en un momento dado, independientemente de si alguien lo pagó o no
  %% Lo saco por ahora ya que se considera que con que la factura tenga el precio que se cobró alcanza
  %% Precio_Historico{
  %%   bigint id PK
  %%   bigint id_curso FK
  %%   decimal Curso_PrecioMensual "length:38, 2"
  %%   %% Sólo la fecha de inicio de vigencia
  %%   DATETIME2 fecha_vigencia_desde "length:6"
  %% }

  Modulo_X_Curso{
    bigint id_modulo PK, FK
    bigint id_curso PK, FK
  }

  Modulo {
    bigint id PK
    varchar Modulo_Nombre "length: 255"
    varchar Modulo_Descripcion "length: 255"
    bigint id_curso FK
  }

  %% Tabla Maestra Profesor
  Profesor {
    NVARCHAR Profesor_id PK "length:255"
    NVARCHAR Profesor_Nombre "length: 255"
    NVARCHAR Profesor_Apellido "length: 255"
    NVARCHAR Profesor_Dni "length: 255"
    DATETIME2 Profesor_FechaNacimiento "length: 6"
    NVARCHAR Profesor_Direccion "length: 255"
    NVARCHAR Profesor_Telefono "length: 255"
    NVARCHAR Profesor_Mail "length: 255"
    id_localidad bigint FK
  }

  %% Tabla Maestra  Sede
  Sede {
    %%AGREGADO id
    bigint id PK 
    NVARCHAR Sede_Nombre "length: 255"
    bigint id_localidad FK
    NVARCHAR Sede_Telefono "length(255)"
    NVARCHAR Sede_Mail "length(255)"
    bigint id_institucion FK
  }

  %% Tablas Paramétricas de Sede
  Localidad {
    bigint id_localidad PK
    NVARCHAR localidad_nombre "length: 255"
    bigint id_provincia FK
  }

  Provincia {
    bigint id_provincia PK
    NVARCHAR provincia_nombre "length: 255"
  }

  %% TABLA MAESTRA Institución
  Institucion{
    %% Usamos clave subrogada para no usar el alfanumérico CUIT como PK
    bigint id PK
    NVARCHAR Institucion_Nombre "length(255)"
    NVARCHAR Institucion_RazonSocial "length(255)"
    NVARCHAR Institucion_Cuit "length(255)" 
  }

  %% Tabla Maestra Evaluación de Curso: representa el evento de una evaluación
  Evaluacion_Curso{
    bigint id PK
    bigint id_modulo FK
    DATETIME2 Evaluacion_Curso_fechaEvaluacion "length: 6"
  }

  Resultado_Evaluacion{
    bigint id_evaluacion_curso PK, FK
    bigint legajo_alumno PK, FK
    %% NULLABLE si estuvo ausente
    bigint Evaluacion_Curso_Nota
    bit Evaluacion_Curso_Presente
    bigint Evaluacion_Curso_Instancia
  }

  %% Tabla Maestra Trabajo Práctico
  %% Se consideran TPs Individual
  Trabajo_Practico {
    %% Clave subrogada porque un alumno puede recursar en el mismo curso
    bigint id PK
    bigint legajo_alumno FK
    bigint id_curso FK
    DATETIME2 Trabajo_Practico_FechaEvaluacion "length: 6"
    bigint Trabajo_Practico_Nota
  }

  %% Tabla Maestra Examenes Finales
  ExamenFinal{
    bigint id PK
    bigint id_curso FK
    DATETIME2 Examen_Final_Fecha "length:6"
    varchar Examen_Final_Hora "length:255"
  }

  %% Entidad Intermedia: Evento de inscripción a un examen final de un alumno
  Inscripcion_Final{
    bigint Inscripcion_Final_Nro PK
    DATETIME2 Inscripcion_Final_Fecha "length:6"
    bigint legajo_alumno FK
    bigint id_examen_final FK
  }

  %% Tabla Transaccional Evaluación Final: es el resultado del examen final
  Evaluacion_Final{
    bigint id PK
    bigint id_inscripcion_final FK
    NVARCHAR id_profesor FK
    %% NULLABLE si estuvo ausente
    bigint Evaluacion_Final_Nota
    bit Evaluacion_Final_Presente
  }

  %% Tabla Transaccional Factura
  Factura{
    bigint Factura_Numero PK
    DATETIME2 Factura_FechaEmision "length: 6"
    DATETIME2 Factura_FechaVencimiento "length: 6"
    bigint legajo_alumno FK
    decimal Factura_Total "length: 18, 2"
  }

  Detalle_Factura{
    %% TODO: está bien tener una clave subrogada?
    bigint id PK
    bigint Factura_Numero FK
    bigint id_curso FK
    bigint periodo_Anio
    bigint periodo_Mes
    decimal Detalle_Factura_Importe "length: 18, 2"
  }

  %% Tabla Transaccional Pago:  registrar y gestionar los pagos de los alumnos.
  Pago {
    bigint id PK
    bigint id_factura FK
    DATETIME2 Pago_Fecha "length: 6"
    decimal Pago_Importe "length: 18, 2"
    %% Documentación: el paso se realiza por un único medio de pago
    %% Documentación: se puede añadir una constraint de CHECK("efectivo", "tarjeta", "transferencia"), etc.
    varchar Pago_MedioPago "length: 255"
  }

  %% Tabla Encuesta
  Encuesta {
    bigint id PK
    bigint id_curso FK
    datetime2 Encuesta_FechaRegistro "length: 6"
    varchar Encuesta_Observacion "length: 255"
  }

  %% Documentación: hay preguntas predefinidas? Si hubiesen preguntas predefinidas se tendría que crear la tabla Pregunta
  Detalle {
    bigint id PK
    bigint id_encuesta FK
    varchar Encuesta_Pregunta "length: 255"
    %% Documentación: Añadir constraint de CHECK(nota <= 10 AND nota >= 1)
    bigint Encuesta_Nota
  }

%% Relaciones de la Tabla Alumno
Alumno }o--|| Localidad: ""

%% Relaciones de la Tabla Profesor
Profesor }o--|| Localidad: ""

%% Relaciones de la Tabla Sede
Sede }o--|| Localidad: ""
Localidad }|--|| Provincia: ""
Institucion ||--|{ Sede: ""

%% Relaciones de la Tabla Curso
Curso |o--o| Sede: ""
Curso |o--|| Categoria: ""
Curso ||--|{ Curso_Dia: ""
Profesor ||--o{ Curso: ""
Curso ||--|{ Modulo_X_Curso: ""
Modulo ||--|{ Modulo_X_Curso: ""

DiaSemana ||--o{ Curso_Dia: ""
%% Curso ||--|{ Precio_Historico: ""

%% Entidad Intermedia: Inscripción
Curso ||--o{ Inscripcion: ""
Alumno ||--o{ Inscripcion: ""

%% Tabla Maestra Evaluación de Modulos de un Curso
%% La instancia de evaluación del modulo de un curso es en particular para ese modelo del curso.
%% Claramente que pueden darse casos de que 2 fechas instancia de evaluación de un modelo de 2 cursos diferentes coincidan
Modulo ||--|{ Evaluacion_Curso: ""
Alumno ||--o{ Resultado_Evaluacion: ""
Evaluacion_Curso ||--o{ Resultado_Evaluacion: ""

%% Tabla Maestra Trabajo Práctico
Alumno ||--o| Trabajo_Practico: ""
Curso ||--o{ Trabajo_Practico: ""

%% Entidad Intermedia: Inscripción a Examen Final
Alumno ||--o{ Inscripcion_Final: ""
ExamenFinal ||--o{ Inscripcion_Final: ""
Curso ||--o{ ExamenFinal: ""

Profesor ||--o{ Evaluacion_Final: ""
Inscripcion_Final ||--o| Evaluacion_Final: ""

%% Entidad Transaccional Factura
Factura ||--|{ Detalle_Factura: ""
%% Documentación: duda, se considera que el pago de la factura se realiza en su totalidad y no en cuotas o una parte por un medio de pago y otra por otra?
%% Por ahora se considera la relación 1:1
Factura ||--o| Pago: ""

%% Tabla Encuesta
Encuesta ||--|{ Detalle: ""